css/styles.css
@import url('https://fonts.googleapis.com/css?family=Fira+Mono:400,500,700&subset=cyrillic');

.top_banner {
    font-family: 'Fira Mono', monospace;
}

#main_text{    
  font-size: 20.228px;
  font-family: "Arial";
  color: rgb(0, 0, 0);
  line-height: 1.2;
  text-align: justifyLeft;
  /*-moz-transform: matrix( 1.23623853211009,0,0,1.23589364303729,0,0);
  -webkit-transform: matrix( 1.23623853211009,0,0,1.23589364303729,0,0);
  -ms-transform: matrix( 1.23623853211009,0,0,1.23589364303729,0,0);
  position: absolute;
  left: 524.384px;
  top: 1391.982px;
  width: 872.233px;
  height: 1158.875px;
  z-index: 7;*/
}

.display-4{
    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
}

#main_text > p {
    text-indent: 40px;
}

.fa-angle-double-right{
    color: darkgray;
}

.border_top_5 {
    border-top: 5px solid orange;
}

.border_bottom_5 {
    border-bottom: 5px solid orange;
}

.border_bottom_2{
    border-bottom: 2px solid orange;
}

.border_2 {
    border: 2px solid white;
}

  @media screen and (max-width: 990px) {
    #header_left_text, #header_right_text, #middle_banner_text {
        font-size: 1.25rem !important;
    }
  }

  @media screen and (max-width: 765px) {
    .contact_links {
        font-size: .75rem !important;
    }

    .display-4{
        font-size: 2rem !important;
    }
  }

  @media screen and (max-width: 740px) {
    #header_left_text, #header_right_text, #middle_banner_text {
        font-size: 1rem !important;
    }
  }

  @media screen and (max-width: 620px) {
    #header_left_text, #header_right_text, #middle_banner_text {
        font-size: .75rem !important;
    }

    /*.btn {
        font-size: .75rem !important;
    }*/
  }

  @media screen and (max-width: 400px) {
    .display-4{
        font-size: 1.5rem !important;
    }

    /*.btn {
        font-size: .5rem !important;
    }*/
  }

